--- a/app/src/main/res/layout/activity_forgotpass.xml
+++ b/app/src/main/res/layout/activity_forgotpass.xml
@@ -5,120 +5,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".SignIn">
+    tools:context=".Forgotpass">
 
     <TextView
-        android:id="@+id/signin"
+        android:id="@+id/titleforgetpass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
+        android:gravity="center"
         android:shadowColor="@color/black"
         android:shadowDx="-3"
         android:shadowDy="3"
         android:shadowRadius="5"
-        android:gravity="center"
-        android:text="Sign In"
+        android:text="Forget password?"
         android:textColor="@color/white"
         android:textSize="35dp"
         android:textStyle="bold" />
 
 
     <EditText
-        android:id="@+id/loginmail"
+        android:id="@+id/forgetpassmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/signin"
+        android:layout_below="@id/titleforgetpass"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_person_outline_24"
         android:drawablePadding="20dp"
         android:gravity="center_vertical"
-        android:hint="Email"
+        android:hint="Please enter your mail"
         android:padding="20dp"
         android:textColor="@color/white"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/white" />
 
-    <EditText
-        android:id="@+id/loginpassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loginmail"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="#30ffffff"
-        android:drawableLeft="@drawable/ic_baseline_info_24"
-        android:drawablePadding="20dp"
-        android:hint="Password"
-        android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:inputType="textPassword"/>
 
-    <CheckBox
-        android:id="@+id/showpassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loginpassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="Show password"
-        android:textColor="@color/white" />
+
+
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/loginbtn"
+        android:id="@+id/sendmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/showpassword"
+        android:layout_below="@+id/forgetpassmail"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/design_default_color_on_secondary"
-        android:text="Login" />
+        android:text="Send Mail" />
 
-    <ProgressBar
-        android:layout_width="24dp"
-        android:layout_height="64dp"
-        android:layout_above="@id/textsocial"
-        android:id="@+id/login_progressbar"
-        android:layout_centerHorizontal="true"
-        android:indeterminateTint="@color/white"
-        android:visibility="gone"/>
 
-    <TextView
-        android:id="@+id/forgotpass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loginbtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="Forgot password?"
-        android:textStyle="bold"
-        android:textColor="@color/white" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/forgotpass"
-        android:orientation="horizontal"
+        android:layout_above="@id/textsocial"
+        android:layout_below="@+id/sendmail"
         android:layout_centerHorizontal="true"
-        android:layout_above="@id/textsocial">
+        android:layout_marginTop="50dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -130,8 +83,8 @@
             android:id="@+id/tvsignup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
             android:text="  Sign Up"
+            android:textColor="@color/white"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -139,7 +92,7 @@
         android:layout_width="350px"
         android:layout_height="150px"
         android:layout_above="@id/textsocial"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="80dp"
         android:background="@drawable/logogreta"
         android:layout_centerHorizontal="true"/>
 
