--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,6 +14,10 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="40dp"
+        android:shadowColor="@color/black"
+        android:shadowDx="-3"
+        android:shadowDy="3"
+        android:shadowRadius="5"
         android:gravity="center"
         android:text="Sign Up"
         android:textColor="@color/white"
