--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,6 +21,10 @@
         android:textColor="@color/white"
         android:textSize="32dp"
         android:textStyle="bold"
+        android:shadowColor="@color/black"
+        android:shadowDx="-3"
+        android:shadowDy="3"
+        android:shadowRadius="5"
         android:id="@+id/welcomesplash"/>
 
     <ImageView
