--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -68,6 +68,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="false"
         android:layout_marginTop="4dp"
+        android:textStyle="bold"
         android:gravity="right"
         android:text="Metier2"
         android:layout_marginEnd="20dp"
@@ -81,6 +82,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="false"
         android:layout_marginTop="4dp"
+        android:textStyle="bold"
         android:gravity="right"
         android:text="Metier1"
         android:layout_marginEnd="120dp"
@@ -122,12 +124,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="8dp"
+                    android:padding="20dp"
                     android:orientation="vertical"
                     android:id="@+id/linearmetier">
 
@@ -178,7 +181,7 @@
                         android:textColor="@color/white" />
 
                     <TextView
-                        android:id="@+id/social6"
+                        android:id="@+id/social5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
@@ -191,13 +194,14 @@
 
                 </LinearLayout>
 
-                <EditText
+                <TextView
                     android:id="@+id/bio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="Biographie "
                     android:layout_marginTop="8dp"
-                    android:padding="10dp"
+                    android:padding="20dp"
+                    android:textSize="20sp"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"/>
 
