--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -55,6 +55,7 @@
         android:shadowDy="3"
         android:shadowRadius="5"
         android:text="Prenom Nom"
+        android:textAllCaps="true"
         android:textColor="#FFFFFFFF"
         android:textColorHighlight="#000000"
         android:textSize="36sp"
@@ -69,6 +70,7 @@
         android:layout_alignParentBottom="false"
         android:layout_marginTop="4dp"
         android:textStyle="bold"
+        android:textAllCaps="true"
         android:gravity="right"
         android:text="Metier2"
         android:layout_marginEnd="20dp"
@@ -85,7 +87,8 @@
         android:textStyle="bold"
         android:gravity="right"
         android:text="Metier1"
-        android:layout_marginEnd="120dp"
+        android:textAllCaps="true"
+        android:layout_marginEnd="170dp"
         android:textColor="@color/white" />
 
     <ImageView
