--- a/app/src/main/res/layout/activity_createprofile.xml
+++ b/app/src/main/res/layout/activity_createprofile.xml
@@ -14,9 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:gravity="center"
         android:shadowColor="@color/black"
         android:shadowDx="-3"
@@ -29,7 +29,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="525dp"
         android:id="@+id/scrollview"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="30dp">
@@ -58,10 +58,6 @@
             </androidx.cardview.widget.CardView>
 
 
-
-
-
-
             <EditText
                 android:id="@+id/createusername"
                 android:layout_width="match_parent"
@@ -70,6 +66,18 @@
                 android:drawableLeft="@drawable/ic_baseline_person_24"
                 android:drawablePadding="7dp"
                 android:hint="Username"
+                android:paddingLeft="10dp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white" />
+
+            <EditText
+                android:id="@+id/createmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
+                android:drawablePadding="7dp"
+                android:hint="Email"
                 android:paddingLeft="10dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white" />
@@ -97,31 +105,6 @@
                 android:paddingLeft="10dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white" />
-
-            <EditText
-                android:id="@+id/cbio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:drawableLeft="@drawable/ic_baseline_info_24"
-                android:drawablePadding="7dp"
-                android:hint="Bio rapide"
-                android:inputType="textMultiLine"
-                android:paddingLeft="10dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Email"
-                android:id="@+id/createmail"
-                android:layout_margin="4dp"
-                android:drawablePadding="7dp"
-                android:textColorHint="@color/white"
-                android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
-                android:paddingLeft="10dp"
-                android:textColor="@color/white"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -183,6 +166,18 @@
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"/>
 
+            <EditText
+                android:id="@+id/cbio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:drawableLeft="@drawable/ic_baseline_info_24"
+                android:drawablePadding="7dp"
+                android:hint="Bio rapide"
+                android:inputType="textMultiLine"
+                android:paddingLeft="10dp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white" />
 
 
         </LinearLayout>
@@ -198,13 +193,32 @@
         android:id="@+id/createprogress"
         android:visibility="gone" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btncancelcreate"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#FB0000"
+            android:text="Cancel"
+            android:layout_marginEnd="50dp"/>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btncreateprofile"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@color/design_default_color_on_secondary"
         android:text="Create Profile" />
+
+
+
+    </LinearLayout>
 
 
 
