--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -136,6 +136,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/greta"
         android:layout_width="350px"
         android:layout_height="150px"
         android:layout_above="@id/textsocial"
